--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,20 @@
-.card {
-    height:200px;
-    width:200px;
+#container {
+    display:grid;
+    grid-template-columns: 33%, 33%, 33%;
+    grid-template-rows: 8%, 25%, 50%, 50%, 30%, 5%;
+    grid-gap: 5px;
+    grid-template-areas: 
+    "navbar navbar navbar";
+}
+#me {
+    float: left;
+    margin-left: 20px;
+    margin-top: 70px;
 }
 
+
+#info {
+    float: right;
+    margin-right: 20px;
+    margin-top: -400px;
+}
